completed animation with css

--- a/src/App.css
+++ b/src/App.css
@@ -5,21 +5,42 @@
   padding: 0;
   background-color: black;
 }
+body {
+  overflow-x: hidden;
+}
 .head_wrap {
-  height: 200vh;
+  height: 125vh;
   position: relative;
 }
 .img_ipad {
+  margin: 2rem 0 0 0;
   position: absolute;
   width: auto;
-  height: calc(29rem * var(--p,1));
+  height: 29rem;
+  transform: translateY(5rem);
+  transform: scale(var(--p, 1))
+    translate(calc(2rem * var(--v, 0)), calc(-2rem * var(--v, 0)));
   z-index: -1;
 }
 .content_ipad {
   background-color: transparent;
-  color: wheat;
-  color: #2bc0f9;
-  font-size: 4rem;
+  color: transparent;
+  font-size: calc(3rem * var(--img-size, 1));
+  font-weight: 900;
+  background-image: #ffb399;
+  background-image: radial-gradient(
+      at 49% 89%,
+      hsla(308, 83%, 72%, 1) 0,
+      transparent 49%
+    ),
+    radial-gradient(at 69% 19%, hsla(279, 84%, 69%, 1) 0, transparent 43%),
+    radial-gradient(at 17% 78%, hsla(257, 88%, 72%, 1) 0, transparent 59%),
+    radial-gradient(at 26% 62%, hsla(161, 74%, 63%, 1) 0, transparent 50%),
+    radial-gradient(at 84% 53%, hsla(33, 85%, 75%, 1) 0, transparent 49%),
+    radial-gradient(at 34% 61%, hsla(192, 85%, 68%, 1) 0, transparent 45%),
+    radial-gradient(at 24% 61%, hsla(5, 67%, 65%, 1) 0, transparent 43%);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 .wrap {
   position: -webkit-sticky;
